# code-analyzer

./: .gitignore  LICENSE  README.md  __init__.py  ai_doc_generator.py  cache_manager.py  cli.py  evidence_generator.py  metrica.json  metrics_collector.py  pyproject.toml  repo_analyzer.py  repo_facts.py  requirements.txt  setup.py
repo_analyzer/: __init__.py  ai_doc_generator.py  cli.py  dependency_parser.py  evidence_generator.py  metrics_collector.py  quality_analyzer.py  scoring_system.py  security_analyzer.py  stack_detector.py  uploader.py
